--- a/ProjectNew_youtube/test-output/old/Default suite/methods-alphabetical.html
+++ b/ProjectNew_youtube/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bb67ed">  <td>24/02/17 11:41:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;base.Bmethod()[pri:0, instance:org.testing.Testscripts.TestScripts@235834f2]">&gt;&gt;Bmethod</td> 
+<tr bgcolor="72b668">  <td>24/02/29 15:56:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;base.Bmethod()[pri:0, instance:org.testing.TestScripts.loginwithdifferentScenarios@6c779568]">&gt;&gt;Bmethod</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="bb67ed">  <td>24/02/17 11:42:47</td>   <td>98372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;base.CloseBrowser()[pri:0, instance:org.testing.Testscripts.TestScripts@235834f2]">&lt;&lt;CloseBrowser</td> 
+<tr bgcolor="72b668">  <td>24/02/29 15:56:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;base.Bmethod()[pri:0, instance:org.testing.TestScripts.loginwithdifferentScenarios@6c779568]">&gt;&gt;Bmethod</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="a7c7e0">  <td>24/02/17 11:42:02</td>   <td>53407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScripts.test()[pri:0, instance:org.testing.Testscripts.TestScripts@235834f2]">test</td> 
+<tr bgcolor="72b668">  <td>24/02/29 15:56:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;base.Bmethod()[pri:0, instance:org.testing.TestScripts.loginwithdifferentScenarios@6c779568]">&gt;&gt;Bmethod</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="72b668">  <td>24/02/29 15:57:26</td>   <td>50077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;base.CloseBrowser()[pri:0, instance:org.testing.TestScripts.loginwithdifferentScenarios@6c779568]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="72b668">  <td>24/02/29 15:57:26</td>   <td>50077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;base.CloseBrowser()[pri:0, instance:org.testing.TestScripts.loginwithdifferentScenarios@6c779568]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="72b668">  <td>24/02/29 15:57:26</td>   <td>50077</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;base.CloseBrowser()[pri:0, instance:org.testing.TestScripts.loginwithdifferentScenarios@6c779568]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="d9d18d">  <td>24/02/29 15:56:55</td>   <td>19182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="loginwithdifferentScenarios.loginwithdifferent(java.lang.String,java.lang.String)[pri:0, instance:org.testing.TestScripts.loginwithdifferentScenarios@6c779568]">loginwithdifferent</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="d9d18d">  <td>24/02/29 15:56:55</td>   <td>19182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="loginwithdifferentScenarios.loginwithdifferent(java.lang.String,java.lang.String)[pri:0, instance:org.testing.TestScripts.loginwithdifferentScenarios@6c779568]">loginwithdifferent</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="d9d18d">  <td>24/02/29 15:56:55</td>   <td>19182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="loginwithdifferentScenarios.loginwithdifferent(java.lang.String,java.lang.String)[pri:0, instance:org.testing.TestScripts.loginwithdifferentScenarios@6c779568]">loginwithdifferent</td> 
   <td>main@617901222</td>   <td></td> </tr>
 </table>
